--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+.body{
+    background-color: aliceblue;
+}
 .header{
     display: flex;
     justify-content: space-between;
@@ -6,7 +9,7 @@
 }
 
 .logo{
-    width :200px ;
+    width :150px ;
 }
 
 .nav-items {
@@ -31,6 +34,7 @@
     width: 200px;
     padding: 5px;
     margin: 8px;
+    border-radius: 10px;
 }
 
 .res-card:hover{
@@ -47,9 +51,44 @@
     flex-wrap: wrap;
     
 }
+.filter{
+    display: flex;
+}
 .filter-btn{
     padding: 5px;
     margin: 5px;
     cursor: pointer;
 }
+.shimmer-card-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.shimmer-card{
+    width : 150px;
+    height: 300px;
+    background-color: rgb(228, 228, 228);
+    margin: 10px;
+    padding: 5px;
+    border-radius: 5px;
+}
+.shimmer-image{
+    
+    width : 100%;
+    height: 50%;
+    background-color:whitesmoke
+}
+.login{
+    background-color: blue;
+    cursor: pointer;
+    color: aliceblue;
+    border-radius: 20px;
+    margin: 10px;
+    width: 90px;
+    height: 50px;
+    padding: 5px;
+    font-size: large;
+}
 
+.search-btn{
+    margin-left: 2px;
+}
